Mon, 13 Aug 2007 22:55:29 +0200 <thp@perli.net>
        * src/gpodder/libipodsync.py: If episode titles are bad (empty or 
          plainly consisting of not allowed chars), we are using a hashed 
          filename, based on the URL (this is the same as the filename in the 
          gPodder download directory); this fixes a bug with BUGGY(!!) RSS 
          feeds that don't have episode titles in their feeds
	  Thanks to Wilfred van Rooijen <wvanrooijen yahoo.com> for reporting
	  this bug!

Fri, 10 Aug 2007 14:57:47 +0200 <thp@perli.net>
        * src/gpodder/libpodcasts.py: Catch error when the
          "applications-internet" icon is not available in the default icon 
          theme and use no icon instead if it's not available; this fixes 
          an error with a broken channel list; thanks to Richard Voigt
          (richardvoigt gmail com) for reporting this bug and help tracking
          down the problem
        * src/gpodder/gui.py: Catch error when using an older PyGTK version 
          that doesn't support the "alignment" property of CellRendererText

Thu, 09 Aug 2007 13:27:18 +0200 <thp@perli.net>
        * src/gpodder/libipodsync.py: I shouldn't write code with my brain 
          switched off. (Added return statement for add_episode_from_channel()
          to libipodsync to fix a stupid error with only one episode being 
          synchronized during a sync run. Thanks to nikosapi for reporting.)

Tue, 07 Aug 2007 20:06:49 +0200 <thp@perli.net>
        * src/gpodder/util.py: New "misc utility functions" module that 
          combines all utility functions that are independend of the rest of 
          gPodder; includes full documentation strings and renamed, fixed 
          function code to be better maintainable; new utility functions 
          should be placed in this module in the future
        * src/gpodder/lib*.py: Clean-up files to use the new "gpodder.util" 
          module where appropriate, remove unnecessary functions